# NK

./: .gitignore  CMakePresets.json  README.md  docker-compose.yaml
NKClient/: CMakeLists.txt  shell_minimal.html
NKClient/include/: JsLogger.hpp  JsStorage.hpp  structs.hpp
NKClient/include/forms/: BlockedUsersForm.hpp  ChannelForm.hpp  ErrorReg.hpp  FormManager.hpp  FriendsForm.hpp  LoginForm.hpp  MainBar.hpp  MainForm.hpp  RegistrationForm.hpp  RequestsForm.hpp  UserForm.hpp
NKClient/include/imgui/: imgui.h  imgui_internal.h
NKClient/include/networking/: ChannelKeysManager.hpp  ChannelMessagesManager.hpp  ChannelsManager.hpp  DevicesManager.hpp  FriendRequestsManager.hpp  NetworkManager.hpp  RequestManager.hpp  SessionManager.hpp  UserManager.hpp  UserRelationsManager.hpp
NKClient/src/: JsStorage.cpp  main.cpp
NKClient/src/forms/: BlockedUsersForm.cpp  ChannelForm.cpp  ErrorReg.cpp  FormManager.cpp  FriendsForm.cpp  LoginForm.cpp  MainBar.cpp  MainForm.cpp  RegistrationForm.cpp  RequestsForm.cpp  UserForm.cpp
NKClient/src/imgui/: imgui.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_tables.cpp
NKClient/src/networking/: ChannelKeysManager.cpp  ChannelMessagesManager.cpp  ChannelsManager.cpp  DevicesManager.cpp  FriendRequestsManager.cpp  (+5 more)
NKProtocol/: CMakeLists.txt
NKProtocol/include/: nk_protocol.h
NKProtocol/src/: nk_protocol.c
NKServer/: ChannelRequests.go  DeviceRequests.go  Dockerfile  EmitLayer.go  GeneralRequests.go  LoginRequests.go  MessagingRequests.go  RelationRequests.go  UserRequests.go  Utils.go  go.mod  go.sum  main.go
data/: nk.db
